# Fission_Demo

./: .gitignore  Cargo.toml  README.md  fission.toml
crates/fission-analysis/: Cargo.toml  build.rs
crates/fission-analysis/benches/: benchmark.rs
crates/fission-analysis/src/: lib.rs  prelude.rs
crates/fission-analysis/src/analysis/: callgraph.rs  mod.rs
crates/fission-analysis/src/app/: context.rs  events.rs  mod.rs  modules.rs  project.rs  snapshot.rs
crates/fission-analysis/src/debug/: linux.rs  macos.rs  memory.rs  mod.rs  traits.rs  types.rs
crates/fission-analysis/src/plugin/: api.rs  hooks.rs  mod.rs  module.rs
crates/fission-analysis/src/unpacker/: breakpoint.rs  context.rs  dumper.rs  engine.rs  importer.rs  loader.rs  memory.rs  mod.rs  pe.rs  types.rs
crates/fission-analysis/src/utils/: mod.rs  patterns.rs
crates/fission-cli/: Cargo.toml  build.rs
crates/fission-cli/src/: lib.rs
crates/fission-cli/src/cli/: args.rs  mod.rs  output.rs
crates/fission-core/: Cargo.toml
crates/fission-core/src/: lib.rs
crates/fission-core/src/common/: types.rs
crates/fission-core/src/constants/: binary_format.rs  memory.rs  mod.rs  windows_api.rs
crates/fission-core/src/core/: config.rs  config_store.rs  constants.rs  errors.rs  logging.rs  mod.rs  models.rs  path_config.rs  prelude.rs  settings.rs  toml_config.rs
crates/fission-core/src/plugin/: traits.rs  types.rs
crates/fission-ffi/: Cargo.toml  build.rs
crates/fission-ffi/src/: lib.rs  pcode.rs  pcode_safe.rs
crates/fission-ffi/src/decomp/: ffi.rs  mod.rs  symbols.rs  types.rs  wrapper.rs
crates/fission-loader/: Cargo.toml
crates/fission-loader/fuzz/: Cargo.toml
crates/fission-loader/fuzz/fuzz_targets/: fuzz_elf_parser.rs  fuzz_pe_parser.rs
crates/fission-loader/src/: lib.rs  prelude.rs
crates/fission-loader/src/detector/: die_engine.rs  mod.rs  signatures.rs
crates/fission-loader/src/loader/: cpp.rs  demangle.rs  golang.rs  mod.rs  rust.rs  types.rs  types_builder.rs  types_discovery.rs  types_patching.rs  types_query.rs  types_string_utils.rs
crates/fission-pcode/: Cargo.toml
crates/fission-pcode/src/: README.md  lib.rs  prelude.rs
crates/fission-pcode/src/pcode/: graph.rs  graph_tests.rs  mod.rs  types.rs
crates/fission-signatures/: Cargo.toml
crates/fission-signatures/data/win_api/: advapi32.json  bcrypt.json  kernel32.json  ntdll.json  shell32.json  user32.json  winhttp.json  wininet.json  ws2_32.json
crates/fission-signatures/data/win_types/: base_types.json  structures.json
crates/fission-signatures/src/: database.rs  lib.rs  msvc_sigs.rs  prelude.rs  relation.rs  signature.rs  win_api.rs  win_constants.rs  win_types.rs
crates/fission-signatures/src/fidbf/: loader.rs  mod.rs  parser.rs  types.rs
ghidra_decompiler/: .clang-tidy  ARCHITECTURE.md  CMakeLists.txt
ghidra_decompiler/decompile/: coreaction.cc  funcdata_varnode.cc  loadimage.hh  loadimage_bfd.hh  printc.cc  type.hh  varnode.cc
ghidra_decompiler/include/fission/analysis/: CallGraphAnalyzer.h  CallingConvDetector.h  EmulationAnalyzer.h  EnumInferrer.h  FidDatabase.h  FunctionMatcher.h  GlobalDataAnalyzer.h  GraphAlgorithms.h  InternalMatcher.h  NoReturnDetector.h  RelationValidator.h  StackFrameAnalyzer.h  TypePropagator.h  TypeSharing.h  VTableAnalyzer.h
ghidra_decompiler/include/fission/config/: PathConfig.h
ghidra_decompiler/include/fission/core/: ArchInit.h  ArchPolicy.h  CliArchitecture.h  ContextServices.h  DataSymbolRegistry.h  DecompilerContext.h  ScopeFission.h  SymbolProvider.h
ghidra_decompiler/include/fission/decompiler/: AnalysisPipeline.h  CFGStructurizer.h  DecompilationCore.h  DecompilationPipeline.h  Limits.h  PcodeExtractor.h  PcodeOptimizationBridge.h  PostProcessPipeline.h  PostProcessor.h
ghidra_decompiler/include/fission/ffi/: DecompContext.h  DecompilerCore.h  DecompilerFFI.h  SymbolProviderFfi.h  SymbolProviderManager.h  libdecomp_ffi.h
ghidra_decompiler/include/fission/loader/: BinaryDetector.h  MemoryImage.h  SectionAwareLoadImage.h  SymbolLoader.h
ghidra_decompiler/include/fission/loaders/: DataSectionScanner.h
ghidra_decompiler/include/fission/processing/: Constants.h  PostProcessors.h  StringScanner.h
ghidra_decompiler/include/fission/types/: GdtBinaryParser.h  GlobalTypeRegistry.h  GuidParser.h  PatternLoader.h  PrototypeEnforcer.h  RttiAnalyzer.h  StructureAnalyzer.h  TypeManager.h  TypeResolver.h
ghidra_decompiler/include/fission/util/: BinaryReader.h
ghidra_decompiler/include/fission/utils/: StepTimer.h  encoding.h  file_utils.h  json_utils.h  logger.h
ghidra_decompiler/languages/: AARCH64BE.sla  AARCH64_AppleSilicon.sla
ghidra_decompiler/src/analysis/: CallGraphAnalyzer.cc  CallingConvDetector.cc  EmulationAnalyzer.cc  EnumInferrer.cc  FidDatabase.cc  FunctionMatcher.cc  GlobalDataAnalyzer.cc  GraphAlgorithms.cc  InternalMatcher.cc  NoReturnDetector.cc  RelationValidator.cc  StackFrameAnalyzer.cc  TypePropagator.cc  TypeSharing.cc  VTableAnalyzer.cc
ghidra_decompiler/src/config/: PathConfig.cc
ghidra_decompiler/src/core/: ArchInit.cc  CliArchitecture.cc  ContextServices.cc  DataSymbolRegistry.cc  DecompilerContext.cc  ScopeFission.cc  SymbolProvider.cc
ghidra_decompiler/src/decompiler/: AnalysisPipeline.cpp  CFGStructurizer.cc  DecompilationCore.cpp  DecompilationPipeline.cc  PcodeExtractor.cc  PcodeOptimizationBridge.cc  PostProcessPipeline.cpp  PostProcessor.cc  main.cc
ghidra_decompiler/src/ffi/: DecompContext.cpp  DecompilerCore.cpp  DecompilerFFI.cpp  SymbolProviderManager.cpp  libdecomp_ffi.cpp
ghidra_decompiler/src/loader/: BinaryDetector.cc  SymbolLoader.cc
ghidra_decompiler/src/loaders/: DataSectionScanner.cc
ghidra_decompiler/src/processing/: Constants.cc  PostProcessors.cc  StringScanner.cc
ghidra_decompiler/src/types/: GdtBinaryParser.cc  GlobalTypeRegistry.cc  GuidParser.cc  PatternLoader.cc  PrototypeEnforcer.cc  RttiAnalyzer.cc  StructureAnalyzer.cc  TypeManager.cc  TypeResolver.cc
ghidra_decompiler/src/utils/: encoding.cc  file_utils.cc  json_utils.cc  logger.cc
ghidra_decompiler/tests/: ContextServicesTest.cpp
(+125 files in other folders)
