[package]
name = "fission-loader"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Binary format loader and parser for Fission"
repository = "https://github.com/sjkim1127/Fission"
keywords = ["binary", "loader", "pe", "elf", "mach-o"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-disasm = { path = "../fission-disasm" }
object = "0.32"
gimli = "0.31"
bytes = "1.11"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
hex = "0.4"
regex = "1.10"
binrw = "0.15.0"
once_cell = "1.19"
blake3 = "1.5"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
rustc-demangle = "0.1"
cpp_demangle = "0.4"
msvc-demangler = "0.9"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.8"
