[package]
name = "fission-pcode"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "P-code IR and optimizer for Fission decompiler"
repository = "https://github.com/sjkim1127/Fission"
keywords = ["ir", "pcode", "optimizer", "decompiler"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
fission-loader = { path = "../fission-loader" }
fission-disasm = { path = "../fission-disasm" }
iced-x86 = { version = "1.21", features = ["std"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
lru = "0.16"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
