[package]
name = "fission-signatures"
version = "0.1.0"
edition = "2024"
authors = ["Fission Dev Team"]
description = "Function signature database for Fission"
repository = "https://github.com/sjkim1127/Fission"
keywords = ["signatures", "windows-api", "msvc"]
categories = ["development-tools"]

[dependencies]
fission-core = { path = "../fission-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
once_cell = "1.19"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
criterion = "0.5"
